# suitesparse

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
suitesparse/: Cargo.toml
suitesparse-sys/: Cargo.toml  build.rs  wrapper.h
suitesparse-sys/src/: lib.rs
suitesparse/src/: lib.rs  sparse.rs  umfpack.rs
